Bug 509417 - Wrong number of transaction remaining at Schedule
Summary: Wrong number of transaction remaining at Schedule
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-12 13:22 UTC by Adilson Urso
Modified: 2025-09-13 06:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
Screen1 (35.15 KB, image/png)
2025-09-12 13:22 UTC, Adilson Urso
Details
Screen2 (35.90 KB, image/png)
2025-09-12 13:22 UTC, Adilson Urso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adilson Urso 2025-09-12 13:22:26 UTC
Created attachment 184908 [details]
Screen1

SUMMARY

When a Scheduled transaction is created and entered, if I edit the Scheduled Transaction, the "Number of transaction remaining" is incorrect.
I attached 2 screen, the first is the Inclusion, the second is the Edit, the remaining should be 9

If I try to increase the number of times by the clicking in the Spinner control or input a specific number, it doesn't work correctly properly.

STEPS TO REPRODUCE
1. Create a Scheduled Transaction (IE 10 times)
2. Enter the Scheduled Transaction
3. Edit the Scheduled Transaction 
4. The "Number of transaction remaining" will be 8

OBSERVED RESULT


EXPECTED RESULT
The "Number of transaction remaining" will be 9

SOFTWARE/OS VERSIONS
Windows:  Windows 11 24H2
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Adilson Urso 2025-09-12 13:22:53 UTC
Created attachment 184909 [details]
Screen2
Comment 2 Thomas Baumgart 2025-09-13 06:03:06 UTC
Git commit 39c62b42130fcc5f0397718bcf2a20f802b39cc3 by Thomas Baumgart.
Committed on 13/09/2025 at 06:02.
Pushed by tbaumgart into branch 'master'.

Fix calculation of number of remaining payments

The number of remaining payments was not calculated properly once a
scheduled payment was entered. This change fixes the problem.
FIXED-IN: 5.2.2

M  +0    -1    kmymoney/views/keditscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/39c62b42130fcc5f0397718bcf2a20f802b39cc3
Comment 3 Thomas Baumgart 2025-09-13 06:46:51 UTC
Git commit 5bd9ac1904ad426489a78751b8aeb1aca671cae9 by Thomas Baumgart.
Committed on 13/09/2025 at 06:03.
Pushed by tbaumgart into branch '5.2'.

Fix calculation of number of remaining payments

The number of remaining payments was not calculated properly once a
scheduled payment was entered. This change fixes the problem.
FIXED-IN: 5.2.2
(cherry picked from commit 39c62b42130fcc5f0397718bcf2a20f802b39cc3)

M  +0    -1    kmymoney/views/keditscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/5bd9ac1904ad426489a78751b8aeb1aca671cae9