Fix calculation of number of remaining payments

The number of remaining payments was not calculated properly once a
scheduled payment was entered. This change fixes the problem.

BUG: 509417
FIXED-IN: 5.2.2